Galaxy S Style Widgets, Thanks Cyanogenmod

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -43,6 +43,26 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".activities.UIPowerWidgetActivity"
+            android:label="@string/title_expanded_widget">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="com.salvagemod.salvageparts.SHORTCUT" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".activities.PowerWidgetActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".activities.PowerWidgetOrderActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
+
         <activity android:name=".activities.SystemActivity"
             android:label="@string/system_settings_title_head">
             <intent-filter>
