add lockscreen music settings from CM. its somewhat broke I will commit the originally author when fixed. Dont want to credit them for something thats broke

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -43,6 +43,14 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".activities.LockscreenActivity"
+            android:label="@string/lockscreen_settings_title_head">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="com.salvagemod.salvageparts.SHORTCUT" />
+            </intent-filter>
+        </activity>
+
         <activity android:name=".activities.UIPowerWidgetActivity"
             android:label="@string/title_expanded_widget">
             <intent-filter>
