--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -42,7 +42,6 @@
                 <category android:name="com.salvagemod.salvageparts.SHORTCUT" />
             </intent-filter>
         </activity>
-
         <activity android:name=".activities.LockscreenActivity"
             android:label="@string/lockscreen_settings_title_head">
             <intent-filter>
@@ -50,7 +49,33 @@
                 <category android:name="com.salvagemod.salvageparts.SHORTCUT" />
             </intent-filter>
         </activity>
-
+        <activity android:name=".activities.LockscreenStyleActivity" android:label="@string/pref_lockscreen_stylecfg_title">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="com.salvagemod.salvageparts.SHORTCUT"/>
+            </intent-filter>
+        </activity>
+        <activity android:name=".activities.LockscreenWidgetsActivity"
+            android:label="@string/pref_lockscreen_widgets_title">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="com.salvagemod.salvageparts.SHORTCUT" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".activities.LockscreenUnlockActivity"
+            android:label="@string/pref_lockscreen_unlock_title">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="com.salvagemod.salvageparts.SHORTCUT" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".activities.LockscreenTimeoutActivity"
+            android:label="@string/pref_lockscreen_timeout_title">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="com.salvagemod.salvageparts.SHORTCUT" />
+            </intent-filter>
+        </activity>
         <activity android:name=".activities.UIPowerWidgetActivity"
             android:label="@string/title_expanded_widget">
             <intent-filter>
