Fix FC for SalvageModTeam Activity

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -106,5 +106,12 @@
                 <action android:name="android.intent.action.MAIN"/>
             </intent-filter>
         </activity>
+
+        <activity android:name=".activities.SalvageTeamActivity"
+            android:label="@string/cpu_settings_title">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+            </intent-filter>
+        </activity>
     </application>
 </manifest>
