Minor string fixes. =P

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -107,8 +107,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activities.SalvageTeamActivity"
-            android:label="@string/cpu_settings_title">
+        <activity android:name=".activities.SalvageTeamActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
             </intent-filter>
